[Fix] event description getting cut off on tablet view

--- a/client/app/components/conference_room/event/current_event.scss
+++ b/client/app/components/conference_room/event/current_event.scss
@@ -4,6 +4,7 @@
   border-radius: 5px;
   font-size: 1.1em;
   padding: 20px 30px 5px;
+  white-space: normal;
 
   display: flex;
   flex-direction: column;
